2011-07-30  Adam Barth  <abarth@webkit.org>

        garden-o-matic should strikeout revisions that have been rolled out
        https://bugs.webkit.org/show_bug.cgi?id=65227

        Reviewed by Dimitri Glazkov.

        This helps gardeners keep track of which problems have been solved.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/Trac.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/main.css:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/model.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/ui.js:

2011-07-30  Adam Barth  <abarth@webkit.org>

        Add missing files to the server.

        * Scripts/webkitpy/tool/servers/gardeningserver.py:

2011-07-29  Adam Barth  <abarth@webkit.org>

        Actually import the logging module!

        * Scripts/webkitpy/common/checkout/scm/git.py:

2011-07-29  Adam Barth  <abarth@webkit.org>

        More debug logging.  Maybe we're running the git version of this
        function somehow?  (That would explain why it doesn't work!)

        * Scripts/webkitpy/common/checkout/scm/git.py:

2011-07-29  Adam Barth  <abarth@webkit.org>

        Add some temporary debug logging messages to try to understand why the
        windows bots can't figure out their current SVN revision.

        * Scripts/webkitpy/common/checkout/scm/svn.py:

2011-07-29  Adam Barth  <abarth@webkit.org>

        Chromium try servers should use downstream test_expectations
        https://bugs.webkit.org/show_bug.cgi?id=65390

        Reviewed by Dirk Pranke.

        Otherwise the try servers will report bogus failures.

        * Scripts/webkitpy/layout_tests/port/chromium.py:

2011-07-29  Dimitri Glazkov  <dglazkov@chromium.org>

        Fix an error in macro collapsing, refactor code to be pretty.
        https://bugs.webkit.org/show_bug.cgi?id=65387

        My set math was wrong.

        Reviewed by Adam Barth.
